# OhMySVG

./: .eslintignore  .gitattributes  .gitignore  Makefile  OhMySVG.doap  README.md  meson.build  package-lock.json  package.json  re.sonny.OhMySVG  re.sonny.OhMySVG.json  re.sonny.OhMySVG.yaml  rollup.config.js  svgo.js
.husky/: pre-push
data/: meson.build  re.sonny.OhMySVG.appdata.xml  re.sonny.OhMySVG.desktop  re.sonny.OhMySVG.gschema.xml  re.sonny.OhMySVG.metainfo.xml
data/icons/: meson.build
po/: LINGUAS  OhMySVG.pot  POTFILES  cs.po  hr.po  meson.build  pt_BR.po
src/: About.js  Application.js  DialogOpen.js  DialogSave.js  Plugins.js  PseudoWorker.js  Window.js  bin.js  import_map.json  ipc.js  main.js  meson.build  ohmysvg.js  plugin_data.js  plugin_names.js  setup.js  svgo.js  tyran.js  util.js  window.blp  window.ui  worker.js
